force-app/main/default/objects/abd_Tax_Calculation__c/abd_Tax_Calculation__c.object-meta.xml
<CustomObject>
    <label>Tax Calculation</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>