force-app/main/default/objects/abd_Tax_Calculation__c/fields/abd_Applicable_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>abd_Applicable_Tax_Rate__c</fullName>
    <label>Applicable Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>