force-app/main/default/objects/abd_Tax_Calculation__c/fields/abd_Late_Penalty__c.field-meta.xml
<CustomField>
    <fullName>abd_Late_Penalty__c</fullName>
    <defaultValue>0.1</defaultValue>
    <label>Late Penalty</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>