force-app/main/default/objects/abd_Tax_Calculation__c/fields/abd_Reporting_Date_Day__c.field-meta.xml
<CustomField>
    <fullName>abd_Reporting_Date_Day__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Reporting Date - Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>